force-app/main/default/objects/TaskTemplate__c/TaskTemplate__c.object-meta.xml
<CustomObject>
    <label>Task Template</label>
    <nameField>
        <label>Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>