force-app/main/default/objects/TaskTemplate__c/fields/ActivityTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ActivityTemplateId__c</fullName>
    <label>Activity Template</label>
    <referenceTo>ActivityTemplate__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>