force-app/main/default/objects/TaskTemplate__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula>ActivityTemplateId__r.Path__c+&apos;.&apos;+ TEXT(Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>